Add art, music, and woodworking registration algorithm

--- a/schedule/templates/schedule/partials/registration_actions.html
+++ b/schedule/templates/schedule/partials/registration_actions.html
@@ -39,6 +39,10 @@
                 <i class="bi bi-layers"></i> 6th Grade Language & Core (New Algorithm)
             </button>
             
+            <button id="run-art-music-ww-btn" class="btn btn-outline-info mb-3">
+                <i class="bi bi-palette"></i> 6th Grade Art, Music & WW (New Algorithm)
+            </button>
+            
             <a href="{% url 'assign_language_courses' %}" class="btn btn-outline-success mb-2">
                 <i class="bi bi-translate"></i> Language Course Assignment
             </a>
