--- a/schedule/templates/schedule/partials/registration_actions.html
+++ b/schedule/templates/schedule/partials/registration_actions.html
@@ -43,6 +43,10 @@
                 <i class="bi bi-palette"></i> 6th Grade Art, Music & WW (New Algorithm)
             </button>
             
+            <button id="run-two-elective-groups-btn" class="btn btn-outline-info mb-3">
+                <i class="bi bi-calendar3-week"></i> 6th Grade Art/Music/WW + Health/Wellness (Same Period)
+            </button>
+            
             <a href="{% url 'assign_language_courses' %}" class="btn btn-outline-success mb-2">
                 <i class="bi bi-translate"></i> Language Course Assignment
             </a>
