--- a/schedule/templates/schedule/base.html
+++ b/schedule/templates/schedule/base.html
@@ -81,6 +81,18 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'student_schedules' %}">Student Schedules</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'schedule_generation' %}">Schedule Generation</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'csv_upload' %}">Data Import/Export</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'admin_reports' %}">Reports</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'section_settings' %}">Settings</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="managementDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Manage
